<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reico_000.prescriptionreadernfc.Scan">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/brand_name"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="left|top"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/scan_Brand_Name"
        android:layout_gravity="left|top"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        android:textColor="#ff001b9d"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/generic_name"
        android:id="@+id/textView"
        android:layout_gravity="left|top"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/scan_Generic_Name"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/scan_Brand_Name"
        android:layout_alignLeft="@+id/scan_Brand_Name"
        android:layout_alignStart="@+id/scan_Brand_Name"
        android:layout_gravity="left|top"
        android:layout_marginLeft="5dp"
        android:textColor="#ff001b9d"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dosage_form"
        android:id="@+id/textView2"
        android:layout_gravity="left|top"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/scan_DosageForm"
        android:layout_marginTop="125dp"
        android:layout_below="@+id/scan_Brand_Name"
        android:layout_alignLeft="@+id/scan_Brand_Name"
        android:layout_alignStart="@+id/scan_Brand_Name"
        android:layout_gravity="left|top"
        android:layout_marginLeft="5dp"
        android:textColor="#ff001b9d"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/per_dosage"
        android:id="@+id/textView3"
        android:layout_gravity="left|top"
        android:layout_marginTop="150dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/scan_PerDosage"
        android:layout_marginTop="175dp"
        android:layout_below="@+id/scan_Brand_Name"
        android:layout_alignLeft="@+id/scan_Brand_Name"
        android:layout_alignStart="@+id/scan_Brand_Name"
        android:layout_gravity="left|top"
        android:layout_marginLeft="5dp"
        android:textColor="#ff001b9d"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_dosage"
        android:id="@+id/textView5"
        android:layout_gravity="left|top"
        android:layout_marginTop="200dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/scan_TotalDosage"
        android:layout_marginTop="225dp"
        android:layout_below="@+id/scan_Brand_Name"
        android:layout_alignLeft="@+id/scan_Brand_Name"
        android:layout_alignStart="@+id/scan_Brand_Name"
        android:layout_gravity="left|top"
        android:layout_marginLeft="5dp"
        android:textColor="#ff001b9d"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/consumption_time"
        android:id="@+id/textView7"
        android:layout_gravity="left|top"
        android:layout_marginTop="250dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="5dp" />

    <ImageView
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:id="@+id/scan_morning"
        android:layout_gravity="left|top"
        android:layout_marginTop="275dp"
        android:visibility="invisible"
        android:src="@drawable/morning"
        android:layout_marginLeft="5dp" />

    <ImageView
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:id="@+id/scan_afternoon"
        android:layout_gravity="left|top"
        android:layout_marginTop="275dp"
        android:layout_marginLeft="95dp"
        android:visibility="invisible"
        android:src="@drawable/lunch" />

    <ImageView
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:id="@+id/scan_evening"
        android:layout_gravity="left|top"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="275dp"
        android:visibility="invisible"
        android:src="@drawable/dinner" />

    <ImageView
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:id="@+id/scan_before_sleep"
        android:layout_gravity="left|top"
        android:layout_marginTop="275dp"
        android:layout_marginLeft="275dp"
        android:visibility="invisible"
        android:src="@drawable/bedtime" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consume"
        android:id="@+id/consumebutton"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="75dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetbutton"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp" />

</FrameLayout>
