<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/list_BrandName"
        android:layout_gravity="left|top"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        android:textColor="#ffbd0200" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/list_PerDosage"
        android:layout_below="@+id/list_DosageForm"
        android:layout_alignLeft="@+id/list_DosageForm"
        android:layout_alignStart="@+id/list_DosageForm"
        android:textColor="#ff0038bd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/list_GenericName"
        android:layout_gravity="center_horizontal|top"
        android:textStyle="bold"
        android:layout_above="@+id/list_DosageForm"
        android:layout_alignLeft="@+id/list_DosageForm"
        android:layout_alignStart="@+id/list_DosageForm"
        android:textColor="#ffbd0200" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/list_DosageForm"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignTop="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:textColor="#ff0038bd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/List_TotalDosage"
        android:layout_gravity="right|top"
        android:layout_below="@+id/list_PerDosage"
        android:layout_alignLeft="@+id/list_PerDosage"
        android:layout_alignStart="@+id/list_PerDosage"
        android:textColor="#ff0038bd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/list_ConsumptionTime"
        android:layout_gravity="left|top"
        android:layout_below="@+id/List_TotalDosage"
        android:layout_alignLeft="@+id/List_TotalDosage"
        android:layout_alignStart="@+id/List_TotalDosage"
        android:textColor="#ff0038bd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dosage_form"
        android:id="@+id/textView7"
        android:layout_below="@+id/list_BrandName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/per_dosage"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_dosage"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/consumption_time"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />
</RelativeLayout>